--- a/package.json
+++ b/package.json
@@ -5,15 +5,28 @@
   "main": "index.js",
   "dependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "minimum-required-coverage": "nyc check-coverage --branches 90 --lines 90 --functions 90 --branches 90",
+    "report-coverage": "cat ./coverage/lcov.info | codecov",
+    "watch:test": "node_modules/mocha/bin/_mocha src/index.test.js -w --compilers js:babel-core/register",
+    "test": "_mocha src/index.test.js --compilers js:babel-core/register",
+    "cover": "nyc npm t",
     "dev": "babel-node src/index.js",
     "prestart": "babel src --out-dir dist",
     "start": "node dist/index.js"
   },
-   "devDependencies": {
+  "devDependencies": {
     "babel-cli": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
-    "nodemon": "^1.10.2"
+    "babel-preset-stage-2": "^6.13.0",
+    "babel-register": "^6.14.0",
+    "chai": "^3.5.0",
+    "codecov": "^1.0.1",
+    "commitizen": "^2.8.6",
+    "ghooks": "^1.3.2",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.0.2",
+    "nodemon": "^1.10.2",
+    "nyc": "^8.3.0"
   },
   "repository": {
     "type": "git",
