--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "helmet": "^2.2.0",
+    "morgan": "^1.7.0"
+  },
   "scripts": {
     "minimum-required-coverage": "nyc check-coverage --branches 90 --lines 90 --functions 90 --branches 90",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
@@ -12,7 +17,7 @@
     "cover": "nyc npm t",
     "dev": "babel-node src/index.js",
     "prestart": "babel src --out-dir dist",
-    "start": "node dist/index.js"
+    "start": "DEBUG=express:* node dist/index.js"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
